--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
 
 
 	<!--The scripts links -->
-	<script type="text/javascript" src="JS/jQuery.js"></script>
-	<script type="text/javascript" src="JS/script.js"></script>
-	<script type="text/javascript" src="JS/energyPkts.js"></script>
-	<script type="text/javascript" src="JS/player.js"></script>
-	<script type="text/javascript" src="JS/cell.js"></script>
-	<script type="text/javascript" src="JS/bot.js"></script>
-	<script type="text/javascript" src="JS/GaneUI.js"></script>
-	<script type="text/javascript" src="JS/update.js"></script>
+	<script type="text/javascript" src="jQuery.js"></script>
+	<script type="text/javascript" src="script.js"></script>
+	<script type="text/javascript" src="energyPkts.js"></script>
+	<script type="text/javascript" src="player.js"></script>
+	<script type="text/javascript" src="cell.js"></script>
+	<script type="text/javascript" src="bot.js"></script>
+	<script type="text/javascript" src="GameUI.js"></script>
+	<script type="text/javascript" src="update.js"></script>
 </body>
 </html>
