--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 	<script type="text/javascript" src="player.js"></script>
 	<script type="text/javascript" src="cell.js"></script>
 	<script type="text/javascript" src="bot.js"></script>
-	<script type="text/javascript" src="GameUI.js"></script>
+	<script type="text/javascript" src="gameUI.js"></script>
 	<script type="text/javascript" src="update.js"></script>
 </body>
 </html>
