--- a/index.html
+++ b/index.html
@@ -128,6 +128,7 @@
       </div>
     </div>
 	<script type="text/javascript" src="save.js"></script>
+	<script type="text/javascript" src="script.js"></script>
    	<script type="text/javascript" src="jQuery.js"></script>
 </body>
 </html>
