--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 <script src="https://code.jquery.com/jquery-git.js"></script>
 <script src="https://cdn.firebase.com/js/client/2.0.4/firebase.js"></script>
   <meta charset="utf-8">
-  <title>Energy</title>  
-</head> 
+  <title>Energy</title>
+</head>
 <body>
 <div id="mouse" class="mouse">
     <div id="sub_Mouse"></div>
@@ -18,12 +18,12 @@
     <div class="help_ ">
       <h4>Energy info</h4>
       <p style="font-size:25px;" class="none"> Energy is Simple. Click on the <span style="color:red;">Active</span> button to start finding <span style="color:lightblue;">Batteries</span>. Once you have enough, convert your batteries into <span style="color:black;">Energy</span>! Find enough parts and energy to <span style="color:green;">LAUNCH!</span></p>
-      <span style="font-size:25px; color:rgb(255, 100, 100);" class="none">Energy is still in beta expect bugs</span>
+      <span style="font-size:25px; color:rgb(255, 100, 100);" class="none">Energy is still in Beta and is continuously being tested/updated</span>
     </div>
     <div class="help_">
       <h4>Energy settings</h4>
       <div style="font-size:25px;" class="none">
-        Nothing here yet 
+        Nothing here yet
       </div>
     </div>
       <div class="help_">
@@ -31,9 +31,8 @@
       <ol style="font-size:25px;" class="none"> 
         <li>Auto Clicker is accepted, but... i'd prefer you break your fingers <span style="color:rgb(255, 100, 100)"><3</span> </li>
         <li>Not all clicks find energy or even parts.</li>
-        <li>Save up for a generator. Yes its worth it.</li>
-        <li></li>
-        <li>When using bots Look For items before Converting</li>
+        <li>Save up for a generator. Yes. It is worth it.</li>
+        <li>When using bots LookFor items before Converting</li>
         <li>Bots use up energy.</li>
       </ol>
     </div>
@@ -127,8 +126,11 @@
           </div>
       </div>
     </div>
-    <script type="text/javascript" src="script.js"></script>
+
+
     <script type="text/javascript" src="save.js"></script>
+    <script type="text/javascript" src="script.js"></script>
+    <script type="text/javascript" src="jQuery.js"></script>
 </body>
 </html>
 
@@ -158,5 +160,4 @@
             alert("Sorry! No Web Worker support.");
         }
   </script>
---> 
- 
+-->
