--- a/index.html
+++ b/index.html
@@ -40,6 +40,22 @@
         <li>Bots use up energy.</li>
       </ol>
     </div>
+    <div class="help_">
+      <h4>Energy Chat</h4>
+      <div style="font-size:25px;" class="none"> 
+        <div style="font-size:15px;">Double click To Exit</div>
+        <div class="chat">
+        <h2><label for="nameInput" id="username">Username</label></h2>
+
+
+          <ul id='example_messages' class="example-chat-messages" style="overflow-y:auto;padding:5px; overflow-x:hidden;"></ul> 
+
+          <footer>
+            <input type='text' id='messageInput'  placeholder='Start typing foo...'>
+          </footer>
+        </div>
+      </div>
+    </div>
     <div id="userNum">0</div>
   </div>
     <div class="game_area_container">
@@ -132,6 +148,7 @@
     </div>
     <script type="text/javascript" src="script.js"></script>
     <script type="text/javascript" src="save.js"></script> 
+    <script type="text/javascript" src="chat.js"></script>
 </body>
 </html>
 
